--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@toverux/ngx-sweetalert2": "^4.0.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "mongoose": "^5.5.2"
+    "mongoose": "^5.5.2",
+    "sweetalert2": "^7.33.1"
   }
 }
