--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.5.2",
+    "nodemon": "^1.18.11",
     "sweetalert2": "^7.33.1"
   }
 }
