--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "highcharts": "^7.1.1",
+    "jquery": "^3.4.0",
     "react": "^16.8.6",
     "react-apexcharts": "^1.3.3",
     "react-chartjs-2": "^2.7.6",
